--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/cosmos": "^4.0.0",
     "@azure/functions": "^4.0.0",
-    "@azure/service-bus": "^7.9.5"
+    "@azure/service-bus": "^7.9.5",
+    "openai": "^4.55.0"
   },
   "main": "src/{index.js,functions/*.js}"
 }
