--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -24,4 +25,34 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - uses: actions/upload-artifact@v4
+      with:
+        path: ./
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+    - uses: actions/download-artifact@v4
+    - name: Create Release name
+      id: release_name
+      run : echo "RELEASE_NAME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+    - name: create zip
+      run: zip -r app.zip . --exclude @.funcignore --exclude .funcignore
+    - name: create release
+      uses: softprops/action-gh-release@v2
+      with:
+        body: |
+          Release ${{ steps.release_name.outputs.RELEASE_NAME }}
+          This is an auto-generated release
+        draft: false
+        prerelease: false
+        files: app.zip
+        name: ${{ steps.release_name.outputs.RELEASE_NAME }}
+        tag_name: ${{ steps.release_name.outputs.RELEASE_NAME }}
+        generate_release_notes: true
+        append_body: true
+        make_latest: true
     
+  
