--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
     - uses: actions/download-artifact@v4
+      with:
+        path: ./
     - name: Create Release name
       id: release_name
       run : echo "RELEASE_NAME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
