--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf dist",
+    "lint": "eslint ./src",
+    "format": "prettier ./src --write",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
     "test": "echo \"No tests yet...\""
@@ -17,9 +19,15 @@
     "openai": "^4.55.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.x",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
     "rimraf": "^5.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.1.0"
   },
   "main": "dist/src/{index.js,functions/*.js}"
 }
