--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier ./src --write",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "jest"
   },
   "dependencies": {
     "@azure/cosmos": "^4.1.0",
@@ -24,8 +24,10 @@
     "@types/node": "^20.x",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "prettier": "3.3.3",
     "rimraf": "^5.0.0",
+    "ts-jest": "^29.2.4",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.1.0"
   },
